@@ -4,6 +4,12 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/09/19
+	* The double continuation error will now display both scripts that
+	  triggered it. [Skotlex]
+	* Loading the storage from the char-server will fail if player is already
+	  tagged in final save state. [Skotlex]
+	* Removed setting ban_spoof_namer, sending invalid global-talk packets will
+	  now just kick the player out of the server. [Skotlex]
 	* Added echoing messages back to self when using @/# commands on whispers
 	  and party/guild messages, to prevent the client from muting yourself.
 	  [Skotlex]
